# gnome-documents

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  gnome-documents.doap
data/: Makefile.am  gnome-documents-search-provider.ini  gnome-documents-search-provider.ini.in  gnome-documents.desktop.in.in  gtk-style.css  org.gnome.Documents.GDataMiner.service.in  org.gnome.Documents.ZpjMiner.service  org.gnome.Documents.ZpjMiner.service.in  org.gnome.documents.gschema.xml.in
data/icons/: Makefile.am
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  ar.po  as.po  be.po  bg.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  lt.po  lv.po  mk.po  ml.po  mr.po  nb.po  nl.po  or.po  (+21 more)
src/: Makefile-js.am  Makefile-lib.am  Makefile-miner.am  Makefile.am  accountsModel.js  application.js  categories.js  changeMonitor.js  collections.js  docFactory.js  documents.js  embed.js  error.js  errorBox.js  filterController.js  filters.js  format.js  gDataMiner.js  gd-tracker-zpj-miner  global.js  gnome-documents-debug.in  gnome-documents-search-provider.in  gnome-documents.gresource.xml  gnome-documents.in  iconView.js  listView.js  loadMore.js  main.js  mainToolbar.js  mainWindow.js  manager.js  miners.js  notifications.js  offsetController.js  org.gnome.Documents.SearchProvider.service.in  path.js.in  preview.js  properties.js  query.js  searchbar.js  (+16 more)
src/lib/: e-gdata-goa-authorizer.c  e-gdata-goa-authorizer.h  gd-dim-renderer.c  gd-dim-renderer.h  gd-framed-pixbuf-renderer.c  gd-framed-pixbuf-renderer.h  gd-gdata-goa-authorizer.c  gd-gdata-goa-authorizer.h  gd-main-icon-view.c  gd-main-icon-view.h  gd-main-list-view.c  gd-main-list-view.h  gd-main-toolbar.c  gd-main-toolbar.h  gd-main-view-generic.c  gd-main-view-generic.h  gd-main-view.c  gd-main-view.h  gd-margin-container.c  gd-margin-container.h  gd-metadata.c  gd-metadata.h  gd-notification.c  gd-pdf-loader.c  gd-pdf-loader.h  gd-sidebar-thumbnails.c  gd-sidebar-thumbnails.h  gd-styled-text-renderer.c  gd-styled-text-renderer.h  gd-tagged-entry.c  gd-tagged-entry.h  gd-thumb-nav.c  gd-thumb-nav.h  gd-toggle-pixbuf-renderer.c  gd-toggle-pixbuf-renderer.h  gd-two-lines-renderer.c  gd-two-lines-renderer.h  gd-utils.c  gd-utils.h  test-pdf-loader.c
src/miner/: gd-gdata-miner.c  gd-gdata-miner.h  gd-miner-tracker.c  gd-miner-tracker.h  gd-miner.c  gd-miner.h  gd-zpj-miner.c  gd-zpj-miner.h  gdata-miner-main.c  miner-main.c  zpj-miner-main.c
src/resources/: app-menu.ui  preview-menu.ui
src/util/: tweener.js
